fix(page): always on vertical scrollbar

--- a/packages/docs/themes/cerebral-website/page/page.css
+++ b/packages/docs/themes/cerebral-website/page/page.css
@@ -9,6 +9,7 @@
   font-weight: 400;
   color: #223338;
   min-height: 100vh;
+  overflow-y: scroll;
 }
 
 .page__content {
